--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     width: 30%;
     padding: 10px 10px;
     margin: 10px auto;
-    margin-left: 30px;
+    margin-left: 28px;
   }
   
   .row:after {
@@ -45,11 +45,19 @@
     color: rgb(0, 162, 255);
   }
 
-  @media screen and (max-width: 600px) {
+
+  @media screen and (max-width: 900px) {
     .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-      margin-left: 0;
+        width: 50%;
+        margin-left: 0;
     }
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+    margin-left: 0;
   }
+}
